@@ -1,18 +1,19 @@
 package ru.ylab.service.implementation;
 
+import org.springframework.stereotype.Service;
 import ru.ylab.domain.dto.OrderDTO;
 import ru.ylab.domain.dto.mapper.OrderMapper;
 import ru.ylab.domain.model.Order;
-import ru.ylab.domain.enums.OrderStatus;
 import ru.ylab.repository.OrderRepository;
 import ru.ylab.service.OrderService;
+import ru.ylab.util.ResourceNotFoundException;
+import ru.ylab.util.ValidationUtil;
 
-
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Service
 public class OrderServiceImpl implements OrderService {
+
     private final OrderRepository orderRepository;
     private final OrderMapper orderMapper = OrderMapper.INSTANCE;
 
@@ -21,80 +22,43 @@ public class OrderServiceImpl implements OrderService {
     }
 
     @Override
-    public void createOrder(OrderDTO orderDTO) {
-        List<Order> existingOrders = orderRepository.findAll();
-        boolean isSold = existingOrders.stream()
-                .anyMatch(order -> order.getCarId() == orderDTO.getCarId()
-                        && order.getStatus() == OrderStatus.COMPLETED);
-
-        if (isSold) {
-            System.out.println("Car sold");
-        } else {
-            Order order = orderMapper.toEntity(orderDTO);
-            order.setOrderDate(LocalDateTime.now());
-            order.setStatus(OrderStatus.PENDING);
-            orderRepository.save(order);
-            System.out.println("Order created successfully.");
-        }
-    }
-
-    @Override
-    public boolean updateOrderStatus(int orderId, OrderStatus status) {
-        Order order = orderRepository.findById(orderId);
-        if (order != null) {
-            order.setStatus(status);
-            orderRepository.save(order);
-            System.out.println("Order status updated successfully.");
-            return true;
-        }
-        return false;
-    }
-
-    @Override
-    public boolean deleteOrder(int orderId) {
-        if (orderRepository.findById(orderId) != null) {
-            orderRepository.delete(orderId);
-            System.out.println("Order deleted successfully.");
-            return true;
-        }
-        return false;
-    }
-
-    @Override
-    public OrderDTO getOrderById(int orderId) {
-        Order order = orderRepository.findById(orderId);
-        return order != null ? orderMapper.toDTO(order) : null;
-    }
-
-    @Override
     public List<OrderDTO> getAllOrders() {
-        List<Order> orders = orderRepository.findAll();
-        return orders.stream()
+        return orderRepository.findAll().stream()
                 .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<OrderDTO> getOrdersByStatus(OrderStatus status) {
-        List<Order> orders = orderRepository.findByStatus(status);
-        return orders.stream()
-                .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<OrderDTO> getOrdersByUserId(int userId) {
-        List<Order> orders = orderRepository.findByClientId(userId);
-        return orders.stream()
+        return orderRepository.findByClientId(userId).stream()
                 .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<OrderDTO> getOrdersByCarId(int carId) {
-        List<Order> orders = orderRepository.findByCarId(carId);
-        return orders.stream()
-                .map(orderMapper::toDTO)
-                .collect(Collectors.toList());
+    public OrderDTO addOrder(OrderDTO orderDTO) {
+        ValidationUtil.validateOrderDTO(orderDTO);
+
+        Order order = orderMapper.toEntity(orderDTO);
+        orderRepository.save(order);
+        return orderMapper.toDTO(order);
     }
+
+    @Override
+    public OrderDTO updateOrder(int id, OrderDTO orderDTO) {
+        Order existingOrder = orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + " not found."));
+
+        orderMapper.updateEntityFromDTO(orderDTO, existingOrder);
+        orderRepository.save(existingOrder);
+        return orderMapper.toDTO(existingOrder);
+    }
+
+    @Override
+    public void deleteOrder(int id) {
+        Order existingOrder = orderRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + " not found."));
+        orderRepository.delete(existingOrder.getId());
+    }
+
 }
